--- a/views/quotes/show.html
+++ b/views/quotes/show.html
@@ -24,6 +24,7 @@
     </div>
     {{/quote}}
     <button class="back-button"><a href="/quotes/index" class="back">Back to Quotes</a></button>
+    <button class= "logout-button"><a href="/" class ="logout">Logout</a></button>
 </body>
 
 </html>
