--- a/views/quotes/edit.html
+++ b/views/quotes/edit.html
@@ -15,7 +15,7 @@
     <div class="image"></div>​
     <div id="container3">
         {{#quote}}
-        <h2 class="editquote"> Edit: {{{ quote }}}  {{author}} </h2>
+        <h2 class="editquote"> Edit: {{{ quote }}} - {{author}} </h2>
         <form class="edit-quote-form" action="/quotes/show" method="put">
             <label>Quote:</label>
             <input id="quote-change-input" value="{{ quote }}">
